<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:outlineAmbientShadowColor="@color/ic_launcher_girls_background"
    app:cardCornerRadius="15dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/news_image_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_rounded"
            android:contentDescription="@string/ivThumbnail"
            android:foreground="@drawable/ic_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_news"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivThumbnail"
            tools:text="Flamengo vence Palmeiras" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/cd_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="As Meninas do ninho derrotaram o palmeiras no último domingo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btOpenLink"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="8dp"
            android:text="@string/open_link"
            android:textAlignment="center"
            android:textColor="@color/pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            app:layout_constraintVertical_bias="0.333" />

        <!-- Referência: Incluir o Efeito de Ripple (https://stackoverflow.com/a/61012286/3072570) -->

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/cd_favorite_pico"
            android:focusable="true"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/btOpenLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btOpenLink"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_favorite" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/share_icon"
            android:focusable="true"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/btOpenLink"
            app:layout_constraintEnd_toStartOf="@id/ivFavorite"
            app:layout_constraintTop_toTopOf="@+id/ivFavorite"
            app:srcCompat="@drawable/ic_share" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>